# cpp-magic-ascii-art-creator-boing-boom-tschak

./: CMakeLists.txt  out.txt
include/: ASCIImagicExceptions.hpp  BMPToASCII.h  ImageToASCII.h  JPEGToASCII.h  PNGToASCII.h
pics/: bbt.txt  test1.txt  test2.txt
src/: BMPToASCII.cpp  ImageToASCII.cpp  JPEGToASCII.cpp  PNGToASCII.cpp  main.cpp
src/lodePNG/: lodepng.cpp
src/nanoJPEG/: nanojpeg.c
